# 2_gitArray

./: CMakeLists.txt  README.md
1_matrix/: main.cpp  matrix.cpp  matrix.h
2_gitArray/: gitArray.cpp  gitArray.h  main.cpp  tempCodeRunnerFile.cpp
data/: a.cpp  b.cpp
